@@ -40,6 +40,8 @@ K  7028	InternetAddress doesn't detect some illegal newlines
 K  7030	Status class doesn't decode mailbox name
 K  7035	add support for IMAP COMPRESS extension (RFC 4978)
 K  7052	Empty Gmail X-GM-LABELS list is misparsed
+K  7075	IMAPMessage.getReceivedDate should check if receivedDate is present
+	before loading envelope
 
 
 		  CHANGES IN THE 1.5.4 RELEASE
